[package]
name = "adnl-tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
curve25519-dalek = "4.0.0"
x25519-dalek = { version = "2.0.0-rc.3", features = ["getrandom"] }
base64 = "0.21.2"
tl-proto = "0.4.3"
rand = "0.8.5"
aes = "0.8.3"
ctr = "0.9.2"
sha2 = "0.10.7"
bytes = "1"
anyhow = "1.0"

[[example]]
name = "ping"
path = "examples/ping.rs"

[[example]]
name = "query"
path = "examples/query.rs"
